@@ -4,7 +4,6 @@
   "factorio_version": "2.0",
   "title": "PlanetsLib",
   "author": "thesixthroc",
-  "contact": "Email: factorio@danielgmartin.com",
   "description": "Code and graphics to help modders creating planets and moons, plus thoughtful standardizations.",
   "homepage": "https://github.com/danielmartin0/PlanetsLib",
   "dependencies": [
@@ -13,5 +12,9 @@
     "? Tiered-Solar-System",
     "(?) Surfaces-Have-Temperature",
     "(?) MT-lib-ex"
-  ]
+  ],
+  "package": {
+    "sync_portal_details": true,
+    "readme": "readme.md"
+  }
 }
